# docops-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: __init__.py  main.py  runner_process.py
apps/cli/: format_human.py  io.py  main.py
apps/web/: .npmrc  index.html  package-lock.json  (+3 more)
docs/: CONTRIBUTING.md  DEPLOYMENT.md
scripts/: check_local.sh  check_tmp_watermark.py  ci_smoke.py  ci_thresholds.py  docker_smoke_test.sh  load_test.py  start_local.sh  stop_local.sh  summarize_logs.py  web_preview_smoke.sh
tests/: test_api_assist.py  test_api_concurrency.py  test_api_limits.py  test_api_logging.py  test_api_meta.py  test_api_multi_skills.py  test_api_precheck.py  test_api_run.py  test_api_skill_registry.py  test_ci_smoke_helpers.py  test_ci_thresholds.py  test_cli_export_suggested_policy.py  test_cli_fix_mode.py  test_cli_format_baseline.py  test_cli_format_mode.py  test_cli_format_report_human.py  test_cli_io.py  test_cli_preset.py  test_cli_run.py  test_cli_warnings_gating.py  test_cors.py  test_debug_dump.py  test_docx_renderer.py  test_dominant_indent_ignores_table_zero.py  test_format_diagnostics.py  test_format_fixer.py  test_format_observed.py  test_format_validator.py  test_healthz.py  test_inspection_record_skill.py  test_load_test_watermark.py  test_log_summarizer.py  test_map_store.py  test_meeting_notice_skill.py  test_middleware_cleanup.py  test_pipeline_e2e.py  test_placeholder_parser.py  test_policy_loader.py  test_request_id_middleware.py  test_run_style_observability.py  (+9 more)
(+38 files in other folders)
